# vbcsr

./: .gitignore  CMakeLists.txt  README.md  generate_benchmark_report.py  pyproject.toml  test_mpi.c
.github/workflows/: cd.yml  ci.yml
cmake/: vbcsrConfig.cmake.in
doc/: Architecture.md  CodeStyle.md  api_reference.md  completeness_matrix.md  csr_bsr_kernel_design.md  developer_guide.md  high_performance_refactor_plan.md  main.tex  mmdev.md  numa_locality_plan.md  performance_test_plan.md  row_major_migration_plan.md  spmm_design.md  user_guide.md
examples/: ex01_basic_serial.py  ex07_graphene_purification.py  ex10_matrix_function.py  fermi_kpm.ipynb  test_spmm.ipynb
recipe/: install_alliance.sh  meta.yaml
tests/: _api_smoke.py  _api_symbol_manifest.py  _suite_manifest.py  _workspace_bootstrap.py  benchmark_large_scale.py  check_mpi_mismatch.py  run_phase0_baseline.py  run_python_suite.py  test_api_compliance.py  test_api_mpi.py  test_api_serial.py  test_assembly_roundtrip.py  test_atomic_surface.py  test_binding.py  test_cleanup_guards.py  test_from_scipy_collective.py  test_image_redistribute_mpi.py  test_kpm.py  test_matrix_kind.py  test_redistribute_cross_mpi.py  test_redistribute_mpi.py  test_scipy_adapter.py  test_spmf.py  test_spmm.py  test_vbcsr.py  test_wrapper_contracts.py  verify_complex_image.py
tests/benchmark/: README.md  debug_bsr_spmm_breakdown.py  debug_dense_kernel_microbench.cpp  debug_mkl_bsr_layout.py  debug_vbcsr_apply_breakdown.py  debug_vbcsr_apply_thread_sweep.py  debug_vbcsr_spgemm_sweep.py  debug_vendor_paths.py  plot_efficiency.py  plot_efficiency_combined.py  plot_scaling.py  run_benchmark.py  run_scaling.sh  slurm_distributed.sbatch  slurm_efficiency.sbatch
tests/benchmark/cluster/: README_CLUSTER.md  plot_weak_scaling.py  run_smoke_2node.sbatch  run_weak_scaling.sbatch  warm_geometry.py
vbcsr/: __init__.py  _wrapper_utils.py  atomic_data.py  image_container.py  matrix.py  multivector.py  pybind_atomic.cpp  pybind_common.hpp  pybind_vbcsr.cpp  utils.py  vector.py
vbcsr/core/: block_csr.hpp  block_memory_pool.hpp  dist_csr.hpp  dist_graph.hpp  dist_multivector.hpp  dist_vector.hpp  graphmf.hpp  kernels.hpp
vbcsr/core/atomic/: atomic_data.hpp  image_container.hpp  io.hpp  neighbourlist.hpp
vbcsr/core/atomic/test/: test_atomic_data.cpp  test_image_container.cpp  test_neighbourlist.cpp  test_neighbourlist_repro.cpp
vbcsr/core/detail/: axpby_ops.hpp  backend_handle.hpp  backend_handle_common.hpp  block_payload_exchange.hpp  block_payload_types.hpp  bsr_backend_handle.hpp  bsr_kernels.hpp  bsr_result_builder.hpp  bsr_spmm.hpp  csr_backend_handle.hpp  csr_kernels.hpp  csr_result_builder.hpp  csr_spmm.hpp  distributed_plans.hpp  distributed_result_graph.hpp  legacy_matrix_backend.hpp  legacy_spmm.hpp  paged_array.hpp  remote_assembly.hpp  shape_paged_storage.hpp  spmm_common.hpp  spmm_exchange.hpp  transpose_exchange.hpp  transpose_ops.hpp  vbcsr_backend_handle.hpp  vbcsr_kernels.hpp  vbcsr_result_builder.hpp  vbcsr_spmm.hpp
vbcsr/core/detail/backend/: README  backend_common.hpp  bsr_backend.hpp  bsr_vendor_cache.hpp  csr_backend.hpp  csr_vendor_cache.hpp  matrix_backend.hpp  thread_domain.hpp  vbcsr_backend.hpp  vendor_common.hpp
vbcsr/core/detail/distributed/: block_payload_exchange.hpp  block_payload_types.hpp  mpi_utils.hpp  result_graph.hpp
vbcsr/core/detail/kernels/: blas_api.hpp  bsr_apply.hpp  csr_apply.hpp  dense_kernels.hpp  lapack_api.hpp  rowmajor_kernels.hpp  vbcsr_apply.hpp
vbcsr/core/detail/ops/: axpby.hpp  transpose.hpp
vbcsr/core/detail/ops/spmf/: graph_function.hpp  subspace.hpp
vbcsr/core/detail/ops/spmm/: bsr.hpp  common.hpp  csr.hpp  vbcsr.hpp
vbcsr/core/detail/storage/: index_map.hpp  numa_buffer.hpp  paged_array.hpp  shape_paged_storage.hpp
vbcsr/core/test/: benchmark_axpby.cpp  benchmark_csr_vendor.cpp  benchmark_dist.cpp  benchmark_spmm_complex.cpp  benchmark_vbcsr_packed.cpp  run_all_tests.py  run_cmake_registered_tests.py  run_native_suite.py  test_asymmetric_filter.cpp  test_axpby.cpp  test_axpby_diff_graph.cpp  test_backend_extensions.cpp  test_block_csr.cpp  test_complex_dist_vector.cpp  test_density.cpp  test_dist_csr.cpp  test_dist_graph.cpp  test_extract_batched.cpp  test_extract_batched_extended.cpp  test_extract_batched_robust.cpp  test_graphmf.cpp  test_hermitian_product.cpp  test_migration_contract.cpp  test_mult_graph_mismatch.cpp  test_multi_sparsity.cpp  test_numa_locality.cpp  test_numeric_reference.cpp  test_pb_csr.cpp  test_robustness.cpp  test_shape_paged_storage.cpp  test_spmm.cpp  test_subgraph.cpp
